# harness_studio

./: .gitignore  PLAN_editable_surface.md  PRD_harness_optimizer.md  PROGRESS_REPORT.md  README.md  REPORT_LOCALIZATION.md  REPORT_TREE_OPTIMIZER.md  WORKFLOW.md  pyproject.toml
artifacts/: .gitignore
examples/: TB2_HEADTOHEAD.md  _calibrate_nexau.py  hillclimb.py  prebake_nexau.py  run_kira_smoke.py  run_nexau_tb2.py  run_toy.py  tb2_ab_compare.py  tb2_ahe_arm.py  tb2_compare.py  tb2_config.py  tb2_score.py  tb2_self_compare.py
patches/: harbor_mini_swe.md
studio/: __init__.py  config.py  orchestrator.py  parts.py  pipeline.py  schemas.py  state.py  targets.py  targets_builtin.py
studio/backends/: __init__.py  _fsdiff.py  _jsonio.py  (+7 more)
tests/: conftest.py  test_ab_compare.py  test_acceptance.py  test_backend_mock.py  test_calibration.py  test_cold_start.py  test_dual_split_acceptance.py  test_dual_split_gate.py  test_edge_cases.py  test_evidence.py  test_explore_backend.py  test_failure_signals.py  test_family_map.py  test_fixes.py  test_gate.py  test_gemini_backend.py  test_hardening_loop.py  test_harness.py  test_health_and_kira.py  test_idea_tree.py  test_ifeval_checks.py  test_instrument.py  test_llm_loop.py  test_localizer.py  test_make_backend.py  test_mapper.py  test_meta_loop.py  test_mini_swe_partmap.py  test_nexau_partmap.py  test_observe.py  test_patterns.py  test_pipeline.py  test_power_split.py  test_profiler.py  test_qa_benchmark.py  test_schemas.py  test_self_compare_protocol.py  test_shell.py  test_splitter_stratified.py  test_strategy_unit.py  (+7 more)
(+82 files in other folders)
